--- a/.github/workflows/mufliheen.org-pr.yml
+++ b/.github/workflows/mufliheen.org-pr.yml
@@ -11,9 +11,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@v4
+        # pin to a supported major tag; v2 is widely available
+        uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version: '8.4'
           extensions: mbstring, bcmath, xml, sqlite, openssl
           ini-values: post_max_size=256M, memory_limit=2G
 
