--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=mufliheen_org_app
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Root@123
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
